changes to sticker positions

--- a/index.html
+++ b/index.html
@@ -483,19 +483,19 @@ html.prereveal .ransom-style-name {
      <img src="/assets/bluepaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
                 w-[32vw] max-w-[520px] min-w-[260px] rotate-[-90deg]"
-         style="top:20%; left:-15%;">
+         style="top:22%; left:-22%;">
 
     <!-- Yellow paper -->
     <img src="/assets/yellowpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
                 w-[28vw] max-w-[460px] min-w-[220px] rotate-[18deg]"
-         style="top:40%; right:-4%;">
+         style="top:10%; right:-18%;">
 
     <!-- Pink paper -->
     <img src="/assets/pinkpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
                 w-[26vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
-         style="bottom:-6%; right:60%;">
+         style="bottom:-16%; left:-10%;">
     </div>
 
 
