--- a/index.html
+++ b/index.html
@@ -482,20 +482,20 @@ html.prereveal .ransom-style-name {
       <!-- stickers (middle layer) -->
      <img src="/assets/bluepaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[32vw] max-w-[520px] min-w-[260px] rotate-[-90deg]"
-         style="top:-10%; left:-35%;">
+                w-[40vw] max-w-[700px] min-w-[260px] rotate-[-90deg]"
+         style="top:-22%; left:-46%;">
 
     <!-- Yellow paper -->
     <img src="/assets/yellowpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[28vw] max-w-[460px] min-w-[220px] rotate-[18deg]"
-         style="top:-10%; right:-8%;">
+                w-[30vw] max-w-[700px] min-w-[220px] rotate-[18deg]"
+         style="top:-6%; right:-18%;">
 
     <!-- Pink paper -->
     <img src="/assets/pinkpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
                 w-[26vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
-         style="top:-15%; left:-30%;">
+         style="bottom:-8%; left:-22%;">
     </div>
 
 
