move stickers again

--- a/index.html
+++ b/index.html
@@ -482,20 +482,26 @@ html.prereveal .ransom-style-name {
       <!-- stickers (middle layer) -->
      <img src="/assets/bluepaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[40vw] max-w-[700px] min-w-[260px] rotate-[-90deg]"
-         style="top:-25%; left:-46%;">
+                w-[50vw] max-w-[700px] min-w-[260px] rotate-[90deg]"
+         style="top:-25%; left:-35%;">
 
     <!-- Yellow paper -->
     <img src="/assets/yellowpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[30vw] max-w-[700px] min-w-[220px] rotate-[18deg]"
-         style="top:-25%; right:-30%;">
+                w-[50vw] max-w-[700px] min-w-[220px] rotate-[18deg]"
+         style="top:-30%; right:-35%;">
 
     <!-- Pink paper -->
     <img src="/assets/pinkpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[26vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
-         style="bottom:-15%; left:-18%;">
+                w-[35vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
+         style="top:-15%; left:-20%;">
+
+         <!-- hearts -->
+    <img src="/assets/starsticker.svg" alt="" aria-hidden="true"
+         class="absolute -z-10 pointer-events-none select-none transform-gpu
+                w-[35vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
+         style="top:-10%; left:-10%;">
     </div>
 
 
