fixed stickers and writing box

--- a/index.html
+++ b/index.html
@@ -453,17 +453,25 @@ html.prereveal .ransom-style-name {
    
     <div class="relative z-10 max-w-4xl px-6">
       <!-- name w ransom style lettering -->
-      <div class="ransom-style-name">
+      <div class="ransom-style-name mt-8">
         <img src="assets/Maisoon-banner-name.svg" class="name-banner" alt="Maisoon">
         <img src="assets/Rahman-banner-name.svg" class="name-banner" alt="Rahman">
       </div>
 
+      <div class="pointer-events-none absolute inset-0 -z-10 rounded-3xl
+              bg-white/40 blur-2xl"></div>
+
+  <!-- shadow box -->
+
       <p class="reveal fade-up cursive" style="--d:.10s">Creative Software Developer</p>
+
+      <div class="rounded-3xl bg-white/65 backdrop-blur-sm
+              shadow-[0_12px_40px_rgba(0,0,0,0.18)] ring-0 px-8 py-6">
       <p class="reveal fade-up text-lg leading-relaxed mt-4 text-slate-800 " style="--d:.10s">
         I’m a creative software developer with a background in art and design, driven by the belief that technology can be both functional and expressive. I love crafting interfaces and tools that merge aesthetic 
         storytelling with technical precision — transforming data, systems, and ideas into experiences that feel intuitive and visually engaging. My work bridges software development, user experience, and art, 
         reflecting a constant pursuit of balance between creativity and clarity in everything I build.
-      </p>
+      </p></div>
       <div class="mt-8 flex items-center justify-center gap-4">
         <a href="#projects" class="px-6 py-3 rounded-xl card hover:bg-white/10">View My Work</a>
         <a href="#contact" class="px-6 py-3 rounded-xl card hover:bg-white/10">Get in Touch</a>
@@ -480,28 +488,58 @@ html.prereveal .ransom-style-name {
         </a>
       </div>
       <!-- stickers (middle layer) -->
-     <img src="/assets/bluepaper.svg" alt="" aria-hidden="true"
+     <img src="assets/bluepaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
                 w-[50vw] max-w-[700px] min-w-[260px] rotate-[90deg]"
-         style="top:-25%; left:-35%;">
+         style="top:-25%; left:-50%;">
+
+         <!-- Cyan paper -->
+    <img src="assets/cyanpaper.svg" alt="" aria-hidden="true"
+         class="absolute -z-10 pointer-events-none select-none transform-gpu
+                w-[70vw] max-w-[800px] min-w-[200px] rotate-[22deg]"
+         style="bottom:-18%; left:-50%;">
 
     <!-- Yellow paper -->
-    <img src="/assets/yellowpaper.svg" alt="" aria-hidden="true"
+    <img src="assets/yellowpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[50vw] max-w-[700px] min-w-[220px] rotate-[18deg]"
-         style="top:-30%; right:-35%;">
+                w-[70vw] max-w-[800px] min-w-[220px] rotate-[18deg]"
+         style="top:-30%; right:-65%;">
 
     <!-- Pink paper -->
-    <img src="/assets/pinkpaper.svg" alt="" aria-hidden="true"
+    <img src="assets/pinkpaper.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[35vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
-         style="top:-15%; left:-20%;">
+                w-[45vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
+         style="bottom:5%; left:-40%;">
+
+         <!-- arrow -->
+    <img src="assets/arrowsticker.svg" alt="" aria-hidden="true"
+         class="absolute -z-10 pointer-events-none select-none transform-gpu
+                w-[25vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
+         style="top:-10%; right:-35%;">
+
+         <!-- lined paper -->
+         <img src="assets/linedpaper.svg" alt="" aria-hidden="true"
+         class="absolute -z-10 pointer-events-none select-none transform-gpu
+                w-[50vw] max-w-[4500px] min-w-[200px] rotate-[-40deg]"
+         style="bottom:-15%; right:-60%;">
 
          <!-- hearts -->
-    <img src="/assets/starsticker.svg" alt="" aria-hidden="true"
+         <img src="assets/heartsticker.svg" alt="" aria-hidden="true"
          class="absolute -z-10 pointer-events-none select-none transform-gpu
-                w-[35vw] max-w-[420px] min-w-[200px] rotate-[60deg]"
-         style="top:-10%; left:-10%;">
+                w-[20vw] max-w-[420px] min-w-[200px]"
+         style="bottom:-15%; right:-30%;">
+
+         <!-- light pink paper -->
+         <img src="assets/lightpinkpaper.svg" alt="" aria-hidden="true"
+         class="absolute -z-10 pointer-events-none select-none transform-gpu
+                w-[20vw] max-w-[500px] min-w-[200px]"
+         style="bottom:-25%; left:-30%;">
+
+         <!-- music -->
+         <img src="assets/musicsticker.svg" alt="" aria-hidden="true"
+         class="absolute -z-10 pointer-events-none select-none transform-gpu
+                w-[20vw] max-w-[420px] min-w-[200px]"
+         style="bottom:-15%; left:-30%;">
     </div>
 
 
