added portfolio, added tooltip

--- a/index.html
+++ b/index.html
@@ -477,14 +477,17 @@ html.prereveal .ransom-style-name {
         <a href="#contact" class="px-6 py-3 rounded-xl card hover:bg-white/10">Get in Touch</a>
       </div>
       <div class="mt-10 flex items-center justify-center gap-6 text-2xl">
-        <a href="https://github.com/maisoonrahman" class="hover:opacity-80" aria-label="GitHub">
+        <a href="https://github.com/maisoonrahman" class="hover:opacity-80" aria-label="GitHub" title="GitHub">
           <img src="assets/GithubOctocat.svg">
         </a>
-        <a href="https://linkedin.com/maisoonrahman" class="hover:opacity-80" aria-label="LinkedIn">
+        <a href="https://linkedin.com/maisoonrahman" class="hover:opacity-80" aria-label="LinkedIn" title="LinkedIn">
           <img src="assets/Linkedin.svg">
         </a>
-        <a href="assets/MaisoonRahman_CV_SWEandData.pdf" download class="hover:opacity-80" aria-label="Resume">
+        <a href="assets/MaisoonRahman_CV_SWEandData.pdf" download class="hover:opacity-80" aria-label="Resume" title="Resume">
           <img src="assets/resume.svg">
+        </a>
+        <a href="assets/MaisoonPortfolio.pdf" download class="hover:opacity-80" aria-label="Portfolio" title="Design Portfolio">
+          <img src="assets/Sparkle.svg">
         </a>
       </div>
       <!-- stickers (middle layer) -->
