--- a/index.html
+++ b/index.html
@@ -810,6 +810,41 @@ html.prereveal .ransom-style-name {
     <div class="max-w-5xl mx-auto px-6">
       <h2 class="tape sr fade tape-green rotate-l">My Projects</h2>
       <div class="mt-8 grid sm:grid-cols-2 gap-6">
+
+        <article class="card sr pop rounded-2xl p-6">
+          <div class="text-2xl font-semibold">Webtoon Genre & Tags Clustering</div>
+            <div class="space-y-3 mt-3">
+            <!-- Role -->
+            <div class="flex items-center gap-2 text-sm text-slate-800">
+              <img src="assets/Person.svg" class="w-4 h-4 invert" alt="role icon">
+              <span>Developer</span>
+            </div>
+            <!-- Tech bubbles -->
+            <div class="flex flex-wrap gap-2 mt-3">
+              <span class="pill text-sm">Python</span>
+              <span class="pill text-sm">numpy</span>
+              <span class="pill text-sm">Scikit-learn</span>
+              <span class="pill text-sm">pandas</span>
+              <span class="pill text-sm">GraphQL (AniList API)</span>
+            </div>
+          </div>
+
+          <p class="mt-4 text-slate-800"> Building a data-driven foundation for a personalized Webtoon recommendation system by analyzing and clustering genres and tags.</p>
+          <ul class="mt-3 list-disc pl-6 text-slate-700 space-y-1">
+            <li>Query the AniList GraphQL API to gather Webtoon metadata.</li>
+            <li>Clean and merge data using Python (Pandas, NumPy).</li>
+            <li>Apply Scikit-learn clustering to reveal genre and tag relationships.</li>
+            <li>Visualize results with Matplotlib.</li>
+            <li>Refine the dataset as a base for my upcoming recommendation algorithm.</li>
+          </ul>
+          <div class="mt-5 flex gap-4">
+              <a href="https://github.com/maisoonrahman/webtoon-tags-clustering" target="_blank" rel="noopener noreferrer"
+                class="group relative p-5 rounded-2xl bg-white/0 transition-all duration-300 hover:scale-110 hover:shadow-[0_0_15px_rgba(99,102,241,0.4)]">
+                <img src="assets/GithubOctocat.svg" class="w-10 h-10 transition-transform duration-300 group-hover:scale-110" alt="GitHub">
+              </a>
+            </div>
+        </article>
+
         <article class="card sr pop rounded-2xl p-6">
           <div class="text-2xl font-semibold">Biological Clock Ensemble using Kalman Filtering</div>
             <div class="space-y-3 mt-3">
@@ -848,6 +883,8 @@ html.prereveal .ransom-style-name {
               </a>
             </div>
         </article>
+
+
         <article class="card sr pop rounded-2xl p-6">
           <div class="text-2xl font-semibold">Melody Mapper</div>
           <div class="space-y-3 mt-3">
