Added better home and about me section bios

--- a/index.html
+++ b/index.html
@@ -588,9 +588,14 @@ html.prereveal .ransom-style-name {
       <div class="rounded-3xl bg-white/65 backdrop-blur-sm
               shadow-[0_12px_40px_rgba(0,0,0,0.18)] ring-0 px-8 py-6">
       <p class="reveal fade-up text-lg leading-relaxed mt-4 text-slate-800 " style="--d:.10s">
-        I’m a creative software developer with a background in art and design, driven by the belief that technology can be both functional and expressive. I love crafting interfaces and tools that merge aesthetic 
-        storytelling with technical precision — transforming data, systems, and ideas into experiences that feel intuitive and visually engaging. My work bridges software development, user experience, and art, 
-        reflecting a constant pursuit of balance between creativity and clarity in everything I build.
+        Hi, I’m Maisoon, a creative software developer and designer who blurs the line between art and code.
+        I design and build experiences where storytelling, interactivity, and data meet, from 
+        intuitive user interfaces and playful game mechanics to experimental projects exploring how 
+        recommendation systems shape what we watch and read. I love dissecting how users engage with
+        digital spaces, writing think pieces on tech and culture (Substack coming soon), and bringing 
+        design-driven ideas to life through thoughtful development.
+
+        I’m on the lookout for new projects and roles starting January 2026.
       </p></div>
       <div class="mt-8 flex items-center justify-center gap-4">
         <a href="#projects" class="px-6 py-3 rounded-xl card hover:bg-white/10">View My Work</a>
@@ -675,10 +680,25 @@ html.prereveal .ransom-style-name {
       <div>
         <h2 class="tape tape-purple rotate-s sr pop">About Me</h2>
         <p class=" sr fade mt-4 text-slate-800">
-          I’m a creative developer who blends software, data, and design to make
-          useful tools and delightful experiences. My journey so far includes building
-          full‑stack apps, experimenting with AI‑assisted workflows, and shipping
-          polished UI that puts people first.
+          I actually started off as a Biochemistry major. Then one semester, I took a random Python class because I wanted 
+          to make games, and ended up loving programming so much that I switched to Computer Science my sophomore year. It 
+          was the best impulsive decision I’ve ever made.
+
+          Since then, I’ve explored everything from software engineering internships to UI/UX design, taking classes that 
+          bridged creativity and logic. I’ve also been lucky enough to attend the Grace Hopper Celebration three years in 
+          a row — GHC 2023, 2024, and now heading to 2025 — where I’ve connected with incredible people who’ve shaped how I
+          think about tech and community.
+
+          While I’ve written a lot of code, I’ve realized I’m at my best when I’m building creative, human-centered projects. 
+          I love studying how people interact with systems and translating that into design and data. For example, in my mini-game 
+          Nap Quest, I designed a survey to understand how players engaged with the game — exploring both quantitative metrics and 
+          qualitative feedback to refine the experience. That project deepened my curiosity about user experience research and 
+          data-driven storytelling.
+
+          Lately, that curiosity has evolved into my Webtoon recommendation project, where I’m building my own dataset and experimenting 
+          with machine learning and GraphQL APIs to see how recommendation systems shape creative discovery.
+
+          I’m currently exploring design-focused and data-driven roles, and open to new opportunities starting January 2026.
         </p>
         <p class="sr fade mt-4 text-slate-800">
           I enjoy projects where I can turn messy, complex ideas into clear,
@@ -689,6 +709,7 @@ html.prereveal .ransom-style-name {
             <div class="text-xl font-semibold">Education</div>
             <div class="mt-2 text-sm text-slate-800">
               B.S. in Computer Science • Case Western Reserve University 
+              Minor in Mathematics, Art Studio
             </div>
           </div>
           <div class="card sr pop rounded-2xl p-5">
