--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Creative Software Developer. Portfolio of Maisoon A Rahman." />
   <link href="https://fonts.googleapis.com/css2?family=Chiron+Sung+HK:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%23222'/%3E%3Ctext x='50' y='58' font-size='48' text-anchor='middle' fill='%23fff' font-family='Arial,Helvetica,sans-serif'%3EM%3C/text%3E%3C/svg%3E">
+  <link rel="icon" type="image/png" href="assets/strawberry.png">
   <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- ================================================================================================================================================================
