fixed project role icon

--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@ html.prereveal .ransom-style-name {
             <div class="space-y-3 mt-3">
             <!-- Role -->
             <div class="flex items-center gap-2 text-sm text-slate-800">
-              <img src="assets/Person.svg" class="w-4 h-4 invert" alt="role icon">
+              <img src="assets/Person.svg" class="w-4 h-4" alt="role icon">
               <span>Developer</span>
             </div>
             <!-- Tech bubbles -->
@@ -871,7 +871,7 @@ html.prereveal .ransom-style-name {
             <div class="space-y-3 mt-3">
             <!-- Role -->
             <div class="flex items-center gap-2 text-sm text-slate-800">
-              <img src="assets/Person.svg" class="w-4 h-4 invert" alt="role icon">
+              <img src="assets/Person.svg" class="w-4 h-4" alt="role icon">
               <span>Developer</span>
             </div>
             <!-- Tech bubbles -->
@@ -911,7 +911,7 @@ html.prereveal .ransom-style-name {
           <div class="space-y-3 mt-3">
             <!-- Role -->
             <div class="flex items-center gap-2 text-sm text-slate-800">
-              <img src="assets/Person.svg" class="w-4 h-4 invert" alt="role icon">
+              <img src="assets/Person.svg" class="w-4 h-4" alt="role icon">
               <span>Scrum Master, Technical Writer</span>
             </div>
             <!-- Tech bubbles -->
@@ -944,7 +944,7 @@ html.prereveal .ransom-style-name {
           <div class="space-y-3 mt-3">
             <!-- Role -->
             <div class="flex items-center gap-2 text-sm text-slate-800">
-              <img src="assets/Person.svg" class="w-4 h-4 invert" alt="role icon">
+              <img src="assets/Person.svg" class="w-4 h-4" alt="role icon">
               <span>UI Designer, Database Designer & Administrator, Developer</span>
             </div>
             <!-- Tech bubbles -->
@@ -976,7 +976,7 @@ html.prereveal .ransom-style-name {
             <div class="space-y-3 mt-3">
             <!-- Role -->
             <div class="flex items-center gap-2 text-sm text-slate-800">
-              <img src="assets/Person.svg" class="w-4 h-4 invert" alt="role icon">
+              <img src="assets/Person.svg" class="w-4 h-4" alt="role icon">
               <span>Level Designer, Developer, Asset Designer, Product Manager</span>
             </div>
             <!-- Tech bubbles -->
